# Lab0

./: .coverage  Dockerfile  README.md  Usage.txt  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: cli.py
tests/: test_cli.py  test_preprocessing.py
